# Youth-and-Urbanism

./: .gitignore  ADMIN_DASHBOARD_COMPLETE.md  AUTHENTICATION_SYSTEM_UPGRADE_SUMMARY.md  CLAUDE.md  COURSE_SYSTEM_FINAL_STATUS.md  DATABASE_SETUP_COMPLETE.md  DEMO_CREDENTIALS.md  DOCKER_SETUP_GUIDE.md  FINAL_SETUP_SUMMARY.md  IMPLEMENTATION_PLAN.md  Login Credentials (6 Users).md  MYSQL_MIGRATION_COMPLETE.md  PARTNER_DASHBOARD_FIXES_COMPLETE.md  PHASE_5B_PAYMENT_INTEGRATION.md  PORT_MANAGEMENT_SUMMARY.md  PRODUCTION_BUILD_SUMMARY.md  Partners Plan.md  README.md  ROUTE_EXTRACTION_COMPLETE.md  Security Audit & Remediation Plan.md  Staff:Teachers Dashboad - Comprehensive Implementation Plan.md  TUHS_Refined_Concept_Note.docx  TUHS_Technical_Specification.docx  Testing Infrastructure, Error Hand.md  UHS CBC Programme Reference Guide.docx  UHS Course Categories.md  UHS Documentation V1.md  course code.md  create_test_users.py  docker-compose.dev.yml  docker-compose.yml  livekit-config.yaml  package.json  playwright.config.ts  pnpm-lock.yaml  turbo.json
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/capabilities/: default.json  mobile.json
apps/web/src-tauri/icons/: icon.icns
apps/web/src-tauri/src/: lib.rs
backend/: .dockerignore  .env.development  .env.docker  .env.example  .gitignore  DATABASE_SCHEMA.md  Dockerfile  ENHANCED_PAYMENTS_IMPLEMENTATION_PLAN.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  README.md  SCHEMA_DESIGN_COMPLETE.md  TESTING_PHASE_1_COMPLETE.md  TESTING_PHASE_2_COMPLETE.md  complete_setup.sh  create_test_users.py  main.py  (+22 more)
(+1860 files in other folders)
