[package]
name = "urban-home-school"
version = "1.0.0"
description = "Urban Home School — AI-powered homeschooling platform"
authors = ["Urban Home School"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
